# webling-telegram-bot

./: .gitignore  .pycharmrc  COPYING  Makefile  README.md  env.example  install_phpmailer.sh  main.py  pyproject.toml  requirements.txt  setup_ide.py  sftp-upload.sh  test-smtp.php  test_webling_connection.py
.github/workflows/: daily-check.yml
test/: test-smtp.php
webhooks/: install_phpmailer.sh  telegram-webhook.php
webhooks/wh_config/: config.example.php  config.php  secrets.php
